syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package grpc_pb;


service Simple {
  rpc Status(StatusRequest) returns (StatusReply) {}
  rpc GetLogs(GetLogRequest) returns (stream GetLogStream) {}
  rpc ReportLogs(stream ReportLogStream) returns (ReportLogResponse) {}
  rpc Chat(stream ChatStream) returns (stream ChatStream) {}
}

message StatusRequest {}

message StatusReply {
    string msg = 1;
    string err = 2;
}

message GetLogRequest {
    string msg = 1;
}

message GetLogStream {
    string msg = 1;
}

message ReportLogStream {
    string msg = 1;
}

message ReportLogResponse {
    string msg = 1;
}

message ChatStream {
    string msg = 1;
}
